add project structure

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -2,24 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Valeria Danko</title>
+    <title>Portfolio page</title>
   </head>
 
   <body>
-    <load ="partials/header.html" />
-
     <main>
       <section>
         <div class="container">
-          <h1>Common page</h1>
-          <img class="animation--heartbeat" src="./img/javascript.svg" alt="" />
+          <a href="./index.html">Go to common page</a>
+          <h1>Welcome to portfolio page</h1>
         </div>
       </section>
     </main>
-
-    <load ="partials/footer.html" />
 
     <script type="module" src="/main.js"></script>
   </body>
