header+hero section

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
 
     <main>
       <section>
-        <div class="container">
-          <h1>Common page</h1>
-          <img class="animation--heartbeat" src="./img/javascript.svg" alt="" />
-        </div>
+        <load ="partials/hero.html" />
+      </section>
+      <section>
+        <load ="partials/slider.html" />
       </section>
     </main>
 
