slider create, update sections for mob version

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
       <section>
         <load ="partials/slider.html" />
       </section>
+      <section>
+        <load ="partials/education.html" />
+      </section>
     </main>
 
     <load ="partials/footer.html" />
