fix header, add professionalism slider

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       </section>
 
       <section>
-        <load ="partials/education.html" />
+        <!-- <load ="partials/education.html" /> -->
       </section>
     </main>
 
